<resources>
    <string name="app_name">PepulNowSearch</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sasitharan">Sasitharan</string>
    <string name="aarav">\@aarav</string>
    <string name="_12_mutual_friends">12 mutual friends</string>
    <string name="description">உன்னால் முடியும் | You Can Do It - Raj Mohan Arumugam - Best Mot...</string>
    <string name="songs">Songs</string>
    <string name="Follow">Follow</string>
    <string name="Following">Following</string>
    <string name="Requested">Requested</string>
    <string name="animation">Animation</string>
    <string name="Free">Free</string>
    <string name="_11_20">11:20</string>
    <string name="creator">Creators</string>
</resources>