<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackblue"
    tools:context=".main.ui.view.activity.MainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressbar_filter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:indeterminate="true"
        android:maxHeight="20dip"
        android:minHeight="0dip"
        android:visibility="visible"
        app:indicatorColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clear_filter"
        app:trackThickness="1dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageView
        android:id="@+id/iv_left_arrow_filter"
        android:layout_width="@dimen/_19sdp"
        android:layout_height="@dimen/_27sdp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/tv_search_title_filter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:fontFamily="@font/avenirnext_bold"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_left_arrow_filter"
        app:layout_constraintStart_toEndOf="@+id/iv_left_arrow_filter"
        app:layout_constraintTop_toTopOf="@+id/iv_left_arrow_filter"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/ev_search_name_filter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/search_back_text"
        android:drawablePadding="@dimen/_3sdp"
        android:fontFamily="@font/avenir_next_medium"
        android:gravity="center|left"
        android:focusable="true"
        android:cursorVisible="true"
        android:selectAllOnFocus="true"
        android:textCursorDrawable="@drawable/cursor_search"
        android:hint="@string/search_by_name"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:paddingLeft="@dimen/_49sdp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="#00000000"
        android:textColorHint="@color/LightGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_title_filter" />

    <TextView
        android:id="@+id/tv_clear_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/avenir_next_medium"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/clear"
        android:textColor="@color/darkslategray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ev_search_name_filter"
        app:layout_constraintEnd_toEndOf="@+id/ev_search_name_filter"
        app:layout_constraintTop_toTopOf="@+id/ev_search_name_filter" />

    <View
        android:id="@+id/view_line_search_filter"
        android:layout_width="match_parent"
        android:layout_height="0.1pt"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:background="@color/LightSlateGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_search_name_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_factor_recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_6sdp"
        android:visibility="visible"
        android:paddingTop="@dimen/_6sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_line_search_filter"
        tools:listitem="@layout/searchlayouthistory" />
</androidx.constraintlayout.widget.ConstraintLayout>