<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackblue"
    android:paddingBottom="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_video_image_lab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_166sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_video_image_front"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/video_image" />

                <TextView
                    android:id="@+id/tv_video_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/tab_layout_background"
                    android:maxLength="6"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/_11_20"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_video_image_front"
                    app:layout_constraintEnd_toEndOf="@+id/iv_video_image_front" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_profile"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="@+id/cv_video_image_lab"
        app:layout_constraintTop_toBottomOf="@+id/cv_video_image_lab"
        app:srcCompat="@android:drawable/btn_dialog">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_image_back"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_creator_user_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_logo_user"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@+id/user_profile"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/cv_video_image_lab"
        app:srcCompat="@drawable/user_logo" />

    <TextView
        android:id="@+id/tv_description_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:fontFamily="@font/avenir_next_medium"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:maxLength="80"
        android:maxLines="2"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_toggle_menu"
        app:layout_constraintStart_toEndOf="@+id/user_profile"
        app:layout_constraintTop_toTopOf="@+id/user_profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_toggle_menu"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="@drawable/three_dot"
        app:layout_constraintBottom_toBottomOf="@+id/tv_description_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_description_content" />

    <TextView
        android:id="@+id/tv_free_premium_decide"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginTop="5dp"
        android:background="@drawable/free_icon_creator"
        android:gravity="center"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="@color/light_green_new"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="@+id/tv_description_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_content" />

    <TextView
        android:id="@+id/tv_songs_creator_tag"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/songs_creator_icon"
        android:fontFamily="@font/avenir_next_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:text="@string/animation"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_free_premium_decide"
        app:layout_constraintStart_toEndOf="@+id/tv_free_premium_decide"
        app:layout_constraintTop_toTopOf="@+id/tv_free_premium_decide" />

    <View
        android:id="@+id/view_line_people"
        android:layout_width="match_parent"
        android:layout_height="0.1pt"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@color/LightSlateGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_free_premium_decide" />
</androidx.constraintlayout.widget.ConstraintLayout>